dependency: 适配springboot和java版本升级，调整依赖组件和代码